Trying to fix overflow

--- a/style.css
+++ b/style.css
@@ -38,5 +38,5 @@ div.gallery {
   }
 
   .newline {
-      overflow:hidden;
+      clear:both;
   }
